Remove "Boolean" constructor
Signed-off-by: Aurelien Pupier <apupier@redhat.com>